# curss

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.cursor/rules/: 01-project-structure.mdc  02-backend-conventions.mdc  03-frontend-conventions.mdc  04-api-contracts.mdc  05-type-bindings.mdc
frontend/: index.html  package.json  vite.config.ts
frontend/scripts/: tst-api.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FeedItem.tsx  FollowList.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/lib/: api.ts
frontend/src/lib/bindings/: Comment.ts  Content.ts  FeedFormat.ts  FeedRequest.ts  FollowListRequest.ts  FollowWithOrder.ts  FollowingUser.ts  Highlight.ts  LinkResponse.ts  User.ts  UserProfile.ts  UserResponse.ts
frontend/src/lib/hooks/: use-all-users.ts  use-feed.ts  use-follow-list.ts  use-search-users.ts
platform/: next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
platform/drizzle/meta/: 0000_snapshot.json  _journal.json
platform/scripts/: test-curius.ts
platform/src/app/: globals.css  layout.tsx  page.tsx
platform/src/app/api/feed/: route.ts
platform/src/app/api/follow-graph/: route.ts
platform/src/app/api/follow-list/: route.ts
platform/src/app/api/sync/: route.ts
platform/src/app/api/top-stories/: route.ts
platform/src/app/api/users/: route.ts
platform/src/app/map/: page.tsx
platform/src/app/steps/: sync-steps.ts
platform/src/app/top/: page.tsx
platform/src/app/workflows/: sync-workflow.ts
platform/src/components/: embedding-atlas-view.tsx  feed-item.tsx  follow-graph.tsx  follow-list.tsx  profile-links.tsx  providers.tsx  top-story-item.tsx
platform/src/components/ui/: button.tsx  calendar.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  slider.tsx  sonner.tsx  subscribe-button.tsx  tabs.tsx  tooltip.tsx
platform/src/db/: schema.ts
platform/src/lib/: converters.ts  curius.ts  embeddings.ts  empty.js  formatters.ts  graph.ts  sync.ts  types.ts
platform/src/lib/hooks/: use-all-users.ts  use-feed.ts  use-follow-graph.ts  use-follow-list.ts  use-search-users.ts  use-top-stories.ts
platform/src/lib/queries/: links.ts  users.ts
platform/src/scripts/: embed-db.ts  fill-db.ts  test-curius.ts
src/: conf.rs  context.rs  main.rs  routes.rs  telemetry.rs
src/curius/: mod.rs  model.rs  rss.rs
viz/: .gitignore  emb.py  pyproject.toml
