[package]
name = "curss"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
backon = { version = "1.5.2", features = ["tokio"] }
redis = { version = "0.32.5", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "aio",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
eyre = "0.6"
futures = "0.3.31"
dotenvy = "0.15.7"
